20110211 1.01 translated from mialsa.lua, first released version