@@ -1,1 +1,3 @@
-20110211 1.01 translated from mialsa.lua, first released version
+20110228 1.03 add listclients, listconnectedto and listconnectedfrom
+20110213 1.02 add disconnectto and disconnectfrom
+20110211 1.01 translated from midialsa.lua, first released version
